# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "casta"
version = "0.0.1"
description = "Calculate spatial transient arrests"
readme = "README.md"
authors = [{ name = "Michelle von Arx", email = "michelle.vonarx@tum.de" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = [
    "numpy>=2.0.1",
    "pandas>=2.2.3",
    "scipy>=1.15.0",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "scikit-learn>=1.6.1",
    "hmmlearn>=0.3.3",
    "tqdm>=4.67.1",
    "shapely>=2.0.6"
]
requires-python = ">=3.10"

#[project.optional-dependencies]

[project.urls]
Homepage = "https://github.com/NanoSignalingLab/photochromic-reversion/"

[project.scripts]
casta = "casta.main:main"